my-work/todo/todo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: todo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  namespace: todo
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: faizan44/todo-app
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: todo
spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
